--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,16 +6,25 @@ on:
   pull_request:
     branches: [ main ]
 
+env:
+  DATABASE_URL: postgresql://postgres:postgres@localhost:5432/fastapi_db
+  TEST_DATABASE_URL: postgresql://postgres:postgres@localhost:5432/fastapi_test_db
+  JWT_SECRET_KEY: "super-secret-key-for-jwt-min-32-chars"
+  JWT_REFRESH_SECRET_KEY: "super-refresh-secret-key-min-32-chars"
+  ACCESS_TOKEN_EXPIRE_MINUTES: 30
+  REFRESH_TOKEN_EXPIRE_DAYS: 7
+  BCRYPT_ROUNDS: 12
+
 jobs:
   test:
     runs-on: ubuntu-latest
     services:
       postgres:
-        image: postgres:latest
+        image: postgres:17
         env:
-          POSTGRES_USER: user
-          POSTGRES_PASSWORD: password
-          POSTGRES_DB: mytestdb  # <-- Dedicated test DB name
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: fastapi_db
         ports:
           - 5432:5432
         options: >-
@@ -24,13 +33,13 @@ jobs:
           --health-timeout 5s
           --health-retries 5
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       
       - uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
+          python-version: '3.12'
           
-      - uses: actions/cache@v3
+      - uses: actions/cache@v4
         with:
           path: ~/.cache/pip
           key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
@@ -38,29 +47,43 @@ jobs:
             ${{ runner.os }}-pip-
       
       - name: Install dependencies
-        env:
-          DATABASE_URL: postgresql://user:password@localhost:5432/mytestdb
         run: |
           python -m venv venv
           source venv/bin/activate
           pip install --upgrade pip
           pip install -r requirements.txt
-          playwright install  # if you use Playwright for e2e tests
       
-      - name: Run tests
-        env:
-          DATABASE_URL: postgresql://user:password@localhost:5432/mytestdb
+      - name: Install Playwright browsers
         run: |
           source venv/bin/activate
+          python -m playwright install chromium
+          python -m playwright install-deps
+      
+      - name: Run unit and integration tests
+        run: |
+          source venv/bin/activate
+          pytest tests/unit/ tests/integration/ --cov=app --cov-report=xml --junitxml=test-results/junit.xml
+      
+      - name: Run E2E tests with docker-compose
+        run: |
+          source venv/bin/activate
+          # Start services with docker-compose
+          docker-compose up -d
           
-          # 1) Unit tests
-          pytest tests/unit/ --cov=src --junitxml=test-results/junit.xml
+          # Wait for services to be healthy
+          echo "Waiting for services to be ready..."
+          sleep 10
           
-          # 2) Integration tests
-          pytest tests/integration/
+          # Run E2E tests
+          pytest tests/e2e/ -v -m e2e --tb=short
           
-          # 3) E2E or other tests
-          pytest tests/e2e/
+          # Capture exit code
+          E2E_EXIT_CODE=$?
+          
+          # Bring down services
+          docker-compose down
+          
+          exit $E2E_EXIT_CODE
 
   security:
     needs: test
@@ -95,12 +118,18 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
           
-      - uses: docker/build-push-action@v5
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
         with:
+          context: .
           push: true
           tags: |
-            kaw393939/601_module9:latest
-            kaw393939/601_module9:${{ github.sha }}
+            ${{ secrets.DOCKERHUB_USERNAME }}/is218-module13:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/is218-module13:${{ github.sha }}
           platforms: linux/amd64,linux/arm64
-          cache-from: type=registry,ref=kaw393939/601_module9:cache
+          cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/is218-module13:cache
           cache-to: type=inline,mode=max
+      
+      - name: Push success notification
+        if: success()
+        run: echo "✅ Docker image successfully pushed to Docker Hub"
