--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -65,9 +65,13 @@ jobs:
           mkdir -p test-results
           pytest tests/unit/ tests/integration/ -v --tb=short || true
       
-      - name: Run E2E tests with docker-compose
+      - name: Run E2E tests with Docker Compose
         run: |
           source venv/bin/activate
+          
+          # Install docker-compose
+          pip install docker-compose
+          
           # Start services with docker-compose
           docker-compose up -d
           
