--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -69,16 +69,20 @@ jobs:
         run: |
           source venv/bin/activate
           
-          # Clean up any previous containers
-          docker compose down -v --remove-orphans || true
+          # Kill any lingering docker processes on port 5432 and 8000
+          sudo lsof -ti:5432,8000 | xargs kill -9 2>/dev/null || true
           
-          # Start services with docker compose (newer version, no hyphen)
+          # Clean up any previous containers and volumes
+          docker compose down -v --remove-orphans || true
+          docker system prune -af --volumes || true
+          
+          # Start services with docker compose
           docker compose up -d
           
           # Wait for services to be healthy
           echo "Waiting for services to be ready..."
           for i in {1..30}; do
-            if docker compose exec -T postgres pg_isready -U postgres > /dev/null 2>&1; then
+            if docker compose exec -T db pg_isready -U postgres -d fastapi_db > /dev/null 2>&1; then
               echo "✅ PostgreSQL is ready"
               break
             fi
@@ -103,12 +107,6 @@ jobs:
           docker compose down -v --remove-orphans || true
           
           exit $E2E_EXIT_CODE
-      
-      - name: Cleanup on failure
-        if: failure()
-        run: |
-          docker compose down -v --remove-orphans || true
-          docker system prune -af || true
 
   security:
     needs: test
