--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -65,47 +65,13 @@ jobs:
           mkdir -p test-results
           pytest tests/unit/ tests/integration/ -v --tb=short || true
       
-      - name: Run E2E tests with Docker Compose
+      - name: Run E2E tests
         run: |
           source venv/bin/activate
-          
-          # Kill any lingering docker processes on port 5432 and 8000
-          sudo lsof -ti:5432,8000 | xargs sudo kill -9 2>/dev/null || true
-          
-          # Clean up any previous containers and volumes
-          docker compose down -v --remove-orphans 2>/dev/null || true
-          docker system prune -af --volumes 2>/dev/null || true
-          
-          # Start services with docker compose using CI override (removes port bindings)
-          docker compose -f docker-compose.yml -f docker-compose.ci.yml up -d
-          
-          # Wait for services to be healthy
-          echo "Waiting for services to be ready..."
-          for i in {1..30}; do
-            if docker compose -f docker-compose.yml -f docker-compose.ci.yml exec -T db pg_isready -U postgres -d fastapi_db > /dev/null 2>&1; then
-              echo "✅ PostgreSQL is ready"
-              break
-            fi
-            echo "⏳ Waiting for PostgreSQL... ($i/30)"
-            sleep 2
-          done
-          
-          sleep 5
-          
-          # Run E2E tests
+          # E2E tests use conftest.py fixtures to start the app and use the postgres service
           pytest tests/e2e/ -v --tb=short
           
-          # Capture exit code
-          E2E_EXIT_CODE=$?
-          
-          # Show logs for debugging
-          echo "=== Docker Compose Logs ==="
-          docker compose -f docker-compose.yml -f docker-compose.ci.yml logs
-          
-          # Bring down services
-          docker compose -f docker-compose.yml -f docker-compose.ci.yml down -v --remove-orphans 2>/dev/null || true
-          
-          exit $E2E_EXIT_CODE
+          exit $?
 
   security:
     needs: test
