--- a/requirements.txt
+++ b/requirements.txt
@@ -23,9 +23,10 @@ iniconfig==2.0.0
 Jinja2==3.1.5
 MarkupSafe==3.0.2
 packaging==24.2
-passlib==1.7.4
+passlib>=1.7.4
 playwright==1.50.0
 pluggy==1.5.0
+setuptools>=65.0
 psycopg2-binary==2.9.10
 pyasn1==0.6.1
 pycparser==2.22
@@ -37,6 +38,7 @@ pytest==8.3.4
 pytest-cov==6.0.0
 pytest-cover==3.0.0
 pytest-coverage==0.0
+pytest-timeout==2.1.1
 python-dotenv==1.0.1
 python-jose==3.3.0
 python-multipart==0.0.20
